--- a/packages/app/src/modules/declaration-remuneration/steps/Step4QuartileDistribution.module.scss
+++ b/packages/app/src/modules/declaration-remuneration/steps/Step4QuartileDistribution.module.scss
@@ -195,10 +195,10 @@
 		min-width: 1rem;
 		width: 1rem;
 		height: 1rem;
-		padding: 0;
+		padding: 0 !important;
 		margin-left: 0.25rem;
 		vertical-align: middle;
-		overflow: visible;
+		overflow: visible !important;
 
 		&::before {
 			margin: 0;
